syntax = "proto3";
package pmsg;
option go_package="./pmsg";

message SingleUserAddGroupMessage {
    string OpenId = 1;      // 用户的OpenId
    string AvatarUrl = 2;     // 用户头像链接
    string NickName = 3;    // 用户昵称
    string GroupId = 4;     // 分组ID
    int64 RoundId = 5;      // 场次ID
    int64 WorldScore = 6;   // 世界积分
    int64 WorldRank = 7;    // 世界排名
    int64 WinningStreamCoin = 8; // 连胜币
    bool IsConsume = 9; // 是否是第一次消费
    int64 Level = 10; // 等级

}